feat: melhorias pwa

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   <meta property="og:locale" content="pr_BR" />
   <meta property="og:locale:alternate" content="fr_FR" />
   <meta property="og:locale:alternate" content="es_ES" />
+  <meta name="theme-color" content="#ffffff"/>
+  <link rel="apple-touch-icon" href="https://raw.githubusercontent.com/luizfelipevbll/luizfelipevbll/master/assets/img/maskable_icon/maskable_icon_x192.png">
   <!-- Base CSS -->
   <link href="css/base.css" rel="stylesheet">
   <!-- Font Awesome Icons 5.4.1 -->
