--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@
     if ("serviceWorker" in navigator) {
       window.addEventListener("load", function() {
         navigator.serviceWorker
-          .register("/js/serviceWorker.js")
+          .register("/serviceWorker.js")
           .then(res => console.log("service worker registered"))
           .catch(err => console.log("service worker not registered", err))
       })
