--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <link href="css/aos.css" rel="stylesheet">
   <script src="js/aos.js"></script>
   <!-- Google Fonts Lib -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet"> -->
   <!-- Base JavaScript -->
   <script src="js/base.js"></script>
 </head>
