--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                   </tr>
                   <tr>
                     <td>City:</td>
-                    <td title="Brazil">Maringá, Paraná 🇧🇷 </td>
+                    <td title="Brazil">Curitiba, Paraná 🇧🇷</td>
                   </tr>
                 </table>
               </div>
